# backend/src/tenants/tenants.schema.ts
@@ -33,6 +33,6 @@ export const TenantPaymentDetailsSchema = z.object({
   bankIban: z.string().nullable(),
   bankAccountHolder: z.string().nullable(),
   revolutHandle: z.string().nullable(),
-  paypalEmail: z.string().nullable(),
+  myposLink: z.string().nullable(),
   cashNote: z.string().nullable(),
 });
